@@ -1,6 +1,12 @@
 ispCP ω 1.0.0 Changelog
 ~~~~~~~~~~~~~~~~~~~~~~~~~~
 
+2009-01-22 Daniel Andreca
+	- GUI:
+		* Fixed #1616: "Open" link in net2ftp links to http://localhost/...
+	- DATABASE:
+		* Fixed #1610: rc7 update script: client/mail_accounts.php "query was empty"
+
 2009-01-21 Benedikt Heintel
 	- GUI:
 		* Fixed #1621: if using `admin hosting plan', no `hosting plan update` in client menu (from rc7)
